@@ -221,6 +221,20 @@ name|BuildException
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tools
+operator|.
+name|ant
+operator|.
+name|DynamicAttribute
+import|;
+end_import
+
 begin_comment
 comment|/**  * This task allow to publish a module revision to an Ivy repository.  */
 end_comment
@@ -1612,6 +1626,8 @@ class|class
 name|PublishArtifact
 implements|implements
 name|Artifact
+implements|,
+name|DynamicAttribute
 block|{
 specifier|private
 name|String
@@ -1624,6 +1640,14 @@ decl_stmt|;
 specifier|private
 name|String
 name|type
+decl_stmt|;
+specifier|private
+name|Map
+name|extra
+init|=
+operator|new
+name|HashMap
+argument_list|()
 decl_stmt|;
 specifier|public
 name|String
@@ -1758,7 +1782,15 @@ name|attName
 parameter_list|)
 block|{
 return|return
-literal|null
+operator|(
+name|String
+operator|)
+name|extra
+operator|.
+name|get
+argument_list|(
+name|attName
+argument_list|)
 return|;
 block|}
 specifier|public
@@ -1767,9 +1799,7 @@ name|getAttributes
 parameter_list|()
 block|{
 return|return
-operator|new
-name|HashMap
-argument_list|()
+name|extra
 return|;
 block|}
 specifier|public
@@ -1781,7 +1811,15 @@ name|attName
 parameter_list|)
 block|{
 return|return
-literal|null
+operator|(
+name|String
+operator|)
+name|extra
+operator|.
+name|get
+argument_list|(
+name|attName
+argument_list|)
 return|;
 block|}
 specifier|public
@@ -1790,9 +1828,7 @@ name|getExtraAttributes
 parameter_list|()
 block|{
 return|return
-operator|new
-name|HashMap
-argument_list|()
+name|extra
 return|;
 block|}
 specifier|public
@@ -1801,32 +1837,7 @@ name|getQualifiedExtraAttributes
 parameter_list|()
 block|{
 return|return
-operator|new
-name|HashMap
-argument_list|()
-return|;
-block|}
-specifier|public
-name|String
-name|getStandardAttribute
-parameter_list|(
-name|String
-name|attName
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-specifier|public
-name|Map
-name|getStandardAttributes
-parameter_list|()
-block|{
-return|return
-operator|new
-name|HashMap
-argument_list|()
+name|extra
 return|;
 block|}
 specifier|public
@@ -1837,6 +1848,27 @@ block|{
 return|return
 literal|false
 return|;
+block|}
+specifier|public
+name|void
+name|setDynamicAttribute
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|String
+name|value
+parameter_list|)
+block|{
+name|extra
+operator|.
+name|put
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 specifier|public
